--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "webpack": "^3.11.0"
   },
   "dependencies": {
+    "express-promise-router": "^3.0.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "webpack-dev-server": "^2.11.1"
