--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "recreation of etsys product images component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "webpack-watch": "webpack --watch",
     "mon": "nodemon server/app.js"
   },
@@ -20,18 +20,23 @@
   "homepage": "https://github.com/BLUE-ORANGE/etsy-product-images#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express": "^4.16.2",
+    "jest": "^22.4.2",
+    "jest-plugin-fs": "^2.7.0",
     "jquery": "^3.3.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "regenerator-runtime": "^0.11.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "sequelize": "^4.33.4",
+    "sequelize-mock": "^0.10.2",
     "webpack": "^3.11.0"
   },
   "dependencies": {
