--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "webpack": "^3.11.0"
   },
   "dependencies": {
+    "babel-preset-env": "^1.6.1",
     "express-promise-router": "^3.0.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
