--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^22.4.2",
     "jest-plugin-fs": "^2.7.0",
     "jquery": "^3.3.1",
+    "nock": "^9.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "regenerator-runtime": "^0.11.1",
@@ -37,12 +38,16 @@
     "request-promise": "^4.2.2",
     "sequelize": "^4.33.4",
     "sequelize-mock": "^0.10.2",
+    "superagent": "^3.8.2",
+    "supertest": "^3.0.0",
     "webpack": "^3.11.0"
   },
   "dependencies": {
     "babel-preset-env": "^1.6.1",
     "express-promise-router": "^3.0.1",
+    "mock-request": "^0.1.2",
     "morgan": "^1.9.0",
+    "node-mocks-http": "^1.6.7",
     "pg": "^7.4.1",
     "webpack-dev-server": "^2.11.1"
   }
