--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-promise-router": "^3.0.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
+    "react-slick": "^0.19.0",
     "webpack-dev-server": "^2.11.1"
   }
 }
