--- a/package.json
+++ b/package.json
@@ -20,25 +20,34 @@
   "homepage": "https://github.com/BLUE-ORANGE/etsy-product-images#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
+    "babel-preset-airbnb": "^2.4.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
-    "express": "^4.16.2",
-    "jquery": "^3.3.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "sequelize": "^4.33.4",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.7.0",
     "webpack": "^3.11.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "4.x",
     "express-promise-router": "^3.0.1",
+    "jquery": "^3.3.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-slick": "^0.19.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "sequelize": "^4.33.4",
     "webpack-dev-server": "^2.11.1"
   }
 }
