--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "etsy-product-images",
+  "jest": {
+    "setupFiles": [
+      "./test-setup.js"
+    ]
+  },
   "version": "1.0.0",
   "description": "recreation of etsys product images component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "webpack-watch": "webpack --watch",
     "mon": "nodemon server/app.js"
   },
@@ -21,11 +26,15 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^22.4.1",
     "babel-loader": "^7.1.2",
     "babel-preset-airbnb": "^2.4.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
@@ -33,6 +42,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.7.0",
+    "jest": "^22.4.2",
+    "react-test-renderer": "^16.2.0",
     "webpack": "^3.11.0"
   },
   "dependencies": {
