--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "4.x",
+    "express-fonts": "^1.0.4",
     "express-promise-router": "^3.0.1",
     "jquery": "^3.3.1",
     "morgan": "^1.9.0",
