--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "pg": "^7.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-image-lightbox": "^4.5.0",
+    "react-modal-image": "^2.1.4",
     "react-slick": "^0.19.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
