--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,14 @@
   "env": {
     "browser": true,
     "node": true
+  },
+  "rules": {
+    "no-unused-expressions":"off",
+    "react/prop-types":"off",
+    "jsx-a11y/click-events-have-key-events":"off",
+    "jsx-a11y/no-noninteractive-element-interactions":"off",
+    "no-param-reassign":"warn"
+
   }
 }
 
