--- a/package.json
+++ b/package.json
@@ -48,9 +48,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "css-loader": "^0.28.10",
     "express": "4.x",
     "express-fonts": "^1.0.4",
+    "express-http-proxy": "^1.1.0",
     "express-promise-router": "^3.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "jquery": "^3.3.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
@@ -62,6 +66,7 @@
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "sequelize": "^4.33.4",
+    "style-loader": "^0.20.2",
     "webpack-dev-server": "^2.11.1"
   }
 }
