--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express-http-proxy": "^1.1.0",
     "express-promise-router": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "jquery": "^3.3.1",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
@@ -67,6 +68,7 @@
     "request-promise": "^4.2.2",
     "sequelize": "^4.33.4",
     "style-loader": "^0.20.2",
+    "url-loader": "^1.0.1",
     "webpack-dev-server": "^2.11.1"
   }
 }
