--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "jest": {
     "setupFiles": [
       "./test-setup.js"
-    ]
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
+        "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   },
   "version": "1.0.0",
   "description": "recreation of etsys product images component",
@@ -42,6 +47,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.7.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
     "webpack": "^3.11.0"
