--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "etsy-product-images",
   "jest": {
     "setupFiles": [
-      "./test-setup.js"
+       "./client/src/jest-setup.js"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$":
